Fix UI bugs and implement dark mode v0.0.2
- Fixed Add Account and Add Transaction modal functionality
- Added functional modal components with proper form validation
- Fixed navigation bar icons using @expo/vector-icons
- Implemented complete dark mode theme system
- Added dark mode toggle switch in Settings
- Updated all screens to use theme-aware styling
- Added darkMode translations for all 5 languages
- Fixed TypeScript configuration
- Version bump to 0.0.2

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -26,6 +26,7 @@
   "theme": "السمة",
   "defaultCurrency": "العملة الافتراضية",
   "autoUpdateRates": "تحديث أسعار الصرف تلقائياً",
+  "darkMode": "الوضع المظلم",
   "customCurrency": "عملة مخصصة",
   "currencyCode": "رمز العملة",
   "currencyName": "اسم العملة",
