--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -25,7 +25,8 @@
   "language": "Idioma",
   "theme": "Tema",
   "defaultCurrency": "Moneda Predeterminada",
-  "autoUpdateRates": "Actualizar Tasas de Cambio Automáticamente",
+    "autoUpdateRates": "Actualización Automática de Tasas",
+  "darkMode": "Modo Oscuro",
   "customCurrency": "Moneda Personalizada",
   "currencyCode": "Código de Moneda",
   "currencyName": "Nombre de Moneda",
