feat: Major UI/UX improvements and complete translation coverage
-  Add transaction edit/delete functionality with confirmation dialogs
-  Complete translation coverage for all 13 languages (EN, ES, FR, DE, AR, FA, IT, PT, RU, ZH, JA, KO, ID)
-  Fix RTL/LTR language switching with restart notification
-  Fix icon color visibility (Edit/Delete buttons now use white icons)
-  Replace all hardcoded strings with proper translation keys
-  Enhanced user experience with consistent messaging and feedback
-  Version bump to 0.1.0 reflecting significant feature additions

Closes multiple UI/UX issues and provides a fully polished multilingual experience.

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -44,5 +44,30 @@
   "name": "الاسم",
   "balance": "الرصيد",
   "recent": "الأحدث",
-  "oldest": "الأقدم"
+  "oldest": "الأقدم",
+  "recentAccounts": "الحسابات الحديثة",
+  "noDescription": "لا يوجد وصف",
+  "net": "صافي",
+  "exchangeRates": "أسعار الصرف",
+  "dataManagement": "إدارة البيانات",
+  "resetAllData": "إعادة تعيين جميع البيانات",
+  "updating": "جاري التحديث...",
+  "fetchingRates": "جلب أحدث أسعار الصرف",
+  "ratesUpdated": "تم تحديث أسعار الصرف بنجاح",
+  "updateFailed": "فشل في تحديث أسعار الصرف",
+  "resetConfirm": "سيؤدي هذا إلى حذف جميع الحسابات والمعاملات والإعدادات بشكل دائم. لا يمكن التراجع عن هذا الإجراء.",
+  "allDataReset": "تم إعادة تعيين جميع البيانات",
+  "resetFailed": "فشل في إعادة تعيين البيانات",
+  "enterAccountName": "أدخل اسم الحساب",
+  "optionalDescription": "وصف اختياري",
+  "createCustomCurrency": "إنشاء عملة مخصصة من خلال تقديم رمز العملة والاسم والرمز وسعر الصرف إلى الدولار الأمريكي.",
+  "currencyCodeHelper": "رمز العملة المكون من 3 أحرف",
+  "bitcoinExample": "مثل Bitcoin، Ethereum",
+  "symbolExample": "مثل ₿، Ξ، ₹",
+  "rateExample": "مثل 45000.00",
+  "rateHelper": "كم يساوي 1 دولار أمريكي بعملتك",
+  "exampleTitle": "مثال:",
+  "exampleText": "الرمز: BTC\nالاسم: Bitcoin\nالرمز: ₿\nالسعر: 0.000025 (إذا كان 1 دولار = 0.000025 بيتكوين)",
+  "languageChanged": "تم تغيير اللغة",
+  "restartRequired": "يرجى إعادة تشغيل التطبيق لتطبيق تغييرات التخطيط للغة الجديدة."
 }
