--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,5 +44,54 @@
   "name": "Name",
   "balance": "Balance",
   "recent": "Recent",
-  "oldest": "Oldest"
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate (positive number)",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum"
 }
