--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -44,5 +44,49 @@
   "name": "Nombre",
   "balance": "Balance",
   "recent": "Reciente",
-  "oldest": "Más Antiguo"
+  "oldest": "Más Antiguo",
+  "recentAccounts": "Cuentas Recientes",
+  "noDescription": "Sin descripción",
+  "net": "Neto",
+  "exchangeRates": "Tipos de Cambio",
+  "dataManagement": "Gestión de Datos",
+  "resetAllData": "Restablecer Todos los Datos",
+  "updating": "Actualizando...",
+  "fetchingRates": "Obteniendo últimos tipos de cambio",
+  "ratesUpdated": "Tipos de cambio actualizados correctamente",
+  "updateFailed": "Error al actualizar tipos de cambio",
+  "resetConfirm": "Esto eliminará permanentemente todas las cuentas, transacciones y configuraciones. Esta acción no se puede deshacer.",
+  "allDataReset": "Todos los datos han sido restablecidos",
+  "resetFailed": "Error al restablecer datos",
+  "enterAccountName": "Ingrese nombre de cuenta",
+  "optionalDescription": "Descripción opcional",
+  "createCustomCurrency": "Cree una moneda personalizada proporcionando el código de moneda, nombre, símbolo y tipo de cambio a USD.",
+  "currencyCodeHelper": "Código de moneda de 3 letras",
+  "bitcoinExample": "ej., Bitcoin, Ethereum",
+  "symbolExample": "ej., ₿, Ξ, ₹",
+  "rateExample": "ej., 45000.00",
+  "rateHelper": "Cuánto vale 1 USD en tu moneda",
+  "exampleTitle": "Ejemplo:",
+  "exampleText": "Código: BTC\nNombre: Bitcoin\nSímbolo: ₿\nTasa: 0.000025 (si 1 USD = 0.000025 BTC)",
+  "error": "Error",
+  "pleaseEnterAccountName": "Por favor ingrese un nombre de cuenta",
+  "pleaseSelectCurrency": "Por favor seleccione una moneda",
+  "accountUpdated": "Cuenta actualizada exitosamente",
+  "accountCreated": "Cuenta creada exitosamente",
+  "update": "actualizar",
+  "create": "crear",
+  "pleaseSelectAccount": "Por favor seleccione una cuenta",
+  "pleaseEnterDescription": "Por favor ingrese una descripción",
+  "pleaseEnterValidAmount": "Por favor ingrese una cantidad válida",
+  "transactionUpdated": "Transacción actualizada exitosamente",
+  "transactionAdded": "Transacción agregada exitosamente",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "¿Para qué es esta transacción?",
+  "fillAllFields": "Por favor complete todos los campos",
+  "currencyCodeInvalid": "El código de moneda debe ser exactamente de 3 letras (ej., USD, EUR)",
+  "validExchangeRate": "Por favor ingrese una tasa de cambio válida (número positivo)",
+  "customCurrencyAdded": "Moneda personalizada {code} agregada exitosamente",
+  "customCurrencyFailed": "Error al agregar moneda personalizada",
+  "currencyCodePlaceholder": "ej., BTC, ETH",
+  "currencyNamePlaceholder": "ej., Bitcoin, Ethereum"
 }
