--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -43,5 +43,23 @@
   "date": "تاریخ",
   "account": "حساب",
   "resetAllData": "بازنشانی تمام داده‌ها",
-  "confirmReset": "آیا مطمئن هستید؟ این عمل تمام داده‌ها را حذف خواهد کرد."
+  "confirmReset": "آیا مطمئن هستید؟ این عمل تمام داده‌ها را حذف خواهد کرد.",
+  "recentAccounts": "حساب‌های اخیر",
+  "noDescription": "بدون توضیح",
+  "exchangeRates": "نرخ‌های ارز",
+  "dataManagement": "مدیریت داده‌ها",
+  "createCustomCurrency": "ایجاد ارز سفارشی",
+  "customCurrencyExample": "مثال: بیت کوین (BTC)",
+  "updating": "در حال به‌روزرسانی...",
+  "fetchingRates": "دریافت آخرین نرخ‌های ارز",
+  "ratesUpdated": "نرخ‌های ارز با موفقیت به‌روزرسانی شد",
+  "updateFailed": "به‌روزرسانی نرخ‌های ارز ناموفق بود",
+  "settingsSaveFailed": "ذخیره تنظیمات ناموفق بود",
+  "resetConfirm": "این عمل تمام حساب‌ها، تراکنش‌ها و تنظیمات را به طور دائم حذف خواهد کرد. این عمل قابل برگشت نیست.",
+  "allDataReset": "تمام داده‌ها بازنشانی شد",
+  "resetFailed": "بازنشانی داده‌ها ناموفق بود",
+  "success": "موفق",
+  "reset": "بازنشانی",
+  "languageChanged": "زبان تغییر کرد",
+  "restartRequired": "لطفاً برنامه را مجدداً راه‌اندازی کنید تا تغییرات طرح‌بندی برای زبان جدید اعمال شود."
 }
