feat: Separate transaction fields into Name and Description
- Replace single description field with name (required) and description (optional)
- Update Transaction interface to include name and optional description
- Enhance AddTransactionModal with separate input fields and validation
- Improve TransactionsScreen display with name as primary text and description as subcaption
- Add automatic data migration for existing transactions
- Update search functionality to search both name and description fields
- Add complete translation coverage for all 13 languages (EN, ES, FR, DE, AR, FA, IT, PT, RU, ZH, JA, KO, ID)
- Bump version to 0.2.0 following semantic versioning

This improves UX for debt/credit tracking by clearly separating person/company identification from transaction details.

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -11,6 +11,11 @@
   "addTransaction": "إضافة معاملة",
   "accountName": "اسم الحساب",
   "description": "الوصف",
+  "personName": "اسم الشخص",
+  "personNamePlaceholder": "اسم الشخص أو الشركة",
+  "pleaseEnterPersonName": "يرجى إدخال اسم الشخص",
+  "transactionDescription": "وصف المعاملة",
+  "transactionDescriptionOptional": "تفاصيل إضافية (اختياري)",
   "currency": "العملة",
   "amount": "المبلغ",
   "type": "النوع",
