--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -11,6 +11,11 @@
   "addTransaction": "Transaktion Hinzufügen",
   "accountName": "Kontoname",
   "description": "Beschreibung",
+  "personName": "Personenname",
+  "personNamePlaceholder": "Name der Person oder Firma",
+  "pleaseEnterPersonName": "Bitte geben Sie den Namen der Person ein",
+  "transactionDescription": "Transaktionsbeschreibung",
+  "transactionDescriptionOptional": "Zusätzliche Details (optional)",
   "currency": "Währung",
   "amount": "Betrag",
   "type": "Typ",
