--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -11,6 +11,11 @@
   "addTransaction": "Agregar Transacción",
   "accountName": "Nombre de la Cuenta",
   "description": "Descripción",
+  "personName": "Nombre de Persona",
+  "personNamePlaceholder": "Nombre de la persona o empresa",
+  "pleaseEnterPersonName": "Por favor ingrese el nombre de la persona",
+  "transactionDescription": "Descripción de Transacción",
+  "transactionDescriptionOptional": "Detalles adicionales (opcional)",
   "currency": "Moneda",
   "amount": "Cantidad",
   "type": "Tipo",
