--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -3,7 +3,7 @@
   "accounts": "حساب‌ها",
   "transactions": "تراکنش‌ها",
   "settings": "تنظیمات",
-  "welcome": "به لجرول خوش آمدید",
+  "welcome": "به LedgerWell خوش آمدید",
   "totalOwed": "کل بدهی من",
   "totalOwedToMe": "کل طلب من",
   "netBalance": "موجودی خالص",
@@ -11,6 +11,11 @@
   "addTransaction": "افزودن تراکنش",
   "accountName": "نام حساب",
   "description": "توضیحات",
+  "personName": "نام شخص",
+  "personNamePlaceholder": "نام شخص یا شرکت",
+  "pleaseEnterPersonName": "لطفا نام شخص را وارد کنید",
+  "transactionDescription": "توضیحات تراکنش",
+  "transactionDescriptionOptional": "جزئیات اضافی (اختیاری)",
   "currency": "ارز",
   "amount": "مبلغ",
   "type": "نوع",
