--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,6 +11,11 @@
   "addTransaction": "Ajouter une Transaction",
   "accountName": "Nom du Compte",
   "description": "Description",
+  "personName": "Nom de Personne",
+  "personNamePlaceholder": "Nom de la personne ou entreprise",
+  "pleaseEnterPersonName": "Veuillez saisir le nom de la personne",
+  "transactionDescription": "Description de Transaction",
+  "transactionDescriptionOptional": "Détails supplémentaires (optionnel)",
   "currency": "Devise",
   "amount": "Montant",
   "type": "Type",
