--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -11,6 +11,11 @@
   "addTransaction": "Tambah Transaksi",
   "accountName": "Nama Akun",
   "description": "Deskripsi",
+  "personName": "Nama Orang",
+  "personNamePlaceholder": "Nama orang atau perusahaan",
+  "pleaseEnterPersonName": "Silakan masukkan nama orang",
+  "transactionDescription": "Deskripsi Transaksi",
+  "transactionDescriptionOptional": "Detail tambahan (opsional)",
   "currency": "Mata Uang",
   "amount": "Jumlah",
   "type": "Jenis",
