--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -11,6 +11,11 @@
   "addTransaction": "Aggiungi transazione",
   "accountName": "Nome del conto",
   "description": "Descrizione",
+  "personName": "Nome Persona",
+  "personNamePlaceholder": "Nome della persona o azienda",
+  "pleaseEnterPersonName": "Si prega di inserire il nome della persona",
+  "transactionDescription": "Descrizione Transazione",
+  "transactionDescriptionOptional": "Dettagli aggiuntivi (opzionale)",
   "currency": "Valuta",
   "amount": "Importo",
   "type": "Tipo",
