--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -11,6 +11,11 @@
   "addTransaction": "取引を追加",
   "accountName": "アカウント名",
   "description": "説明",
+  "personName": "人名",
+  "personNamePlaceholder": "人または会社の名前",
+  "pleaseEnterPersonName": "人の名前を入力してください",
+  "transactionDescription": "取引の説明",
+  "transactionDescriptionOptional": "追加の詳細（任意）",
   "currency": "通貨",
   "amount": "金額",
   "type": "タイプ",
