--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -11,6 +11,11 @@
   "addTransaction": "거래 추가",
   "accountName": "계정 이름",
   "description": "설명",
+  "personName": "사람 이름",
+  "personNamePlaceholder": "사람 또는 회사 이름",
+  "pleaseEnterPersonName": "사람의 이름을 입력해주세요",
+  "transactionDescription": "거래 설명",
+  "transactionDescriptionOptional": "추가 세부사항 (선택사항)",
   "currency": "통화",
   "amount": "금액",
   "type": "유형",
