--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -11,6 +11,11 @@
   "addTransaction": "Adicionar transação",
   "accountName": "Nome da conta",
   "description": "Descrição",
+  "personName": "Nome da Pessoa",
+  "personNamePlaceholder": "Nome da pessoa ou empresa",
+  "pleaseEnterPersonName": "Por favor, insira o nome da pessoa",
+  "transactionDescription": "Descrição da Transação",
+  "transactionDescriptionOptional": "Detalhes adicionais (opcional)",
   "currency": "Moeda",
   "amount": "Valor",
   "type": "Tipo",
