--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,6 +11,11 @@
   "addTransaction": "Добавить транзакцию",
   "accountName": "Название счета",
   "description": "Описание",
+  "personName": "Имя Человека",
+  "personNamePlaceholder": "Имя человека или компании",
+  "pleaseEnterPersonName": "Пожалуйста, введите имя человека",
+  "transactionDescription": "Описание Транзакции",
+  "transactionDescriptionOptional": "Дополнительные детали (необязательно)",
   "currency": "Валюта",
   "amount": "Сумма",
   "type": "Тип",
