--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -11,6 +11,11 @@
   "addTransaction": "添加交易",
   "accountName": "账户名称",
   "description": "描述",
+  "personName": "人员姓名",
+  "personNamePlaceholder": "人员或公司名称",
+  "pleaseEnterPersonName": "请输入人员姓名",
+  "transactionDescription": "交易描述",
+  "transactionDescriptionOptional": "附加详情（可选）",
   "currency": "货币",
   "amount": "金额",
   "type": "类型",
