fix: Language and RTL display issues
- Fix language picker width in Settings to display full language names
- Improve RTL to LTR layout switching with immediate effect
- Add missing languageChanged and restartRequired translations to all languages
- Enhance RTL switching mechanism with forced layout updates
- Update changeLanguage function to show notifications in selected language
- Bump version to 0.2.1

Fixes:
- Language box truncation in Settings screen
- RTL/LTR switching delay requiring app restart
- English-only notifications for LTR language changes

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -66,5 +66,7 @@
   "allDataReset": "Alle Daten wurden zurückgesetzt",
   "resetFailed": "Zurücksetzen der Daten fehlgeschlagen",
   "success": "Erfolg",
-  "reset": "Zurücksetzen"
+  "reset": "Zurücksetzen",
+  "languageChanged": "Sprache Geändert",
+  "restartRequired": "Bitte starten Sie die App neu, um die Layout-Änderungen für die neue Sprache anzuwenden."
 }
