--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -71,5 +71,7 @@
   "allDataReset": "Все данные были сброшены",
   "resetFailed": "Не удалось сбросить данные",
   "success": "Успех",
-  "reset": "Сбросить"
+  "reset": "Сбросить",
+  "languageChanged": "Язык Изменён",
+  "restartRequired": "Пожалуйста, перезапустите приложение, чтобы применить изменения макета для нового языка."
 }
